<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <sis.com.sis.sis_app.Views.CustomTextView
                android:id="@+id/TopicDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginRight="@dimen/padding_normal"
                android:text="@string/main_tab_detail"
                android:textColor="@color/colorBlueMedium"
                android:textSize="@dimen/font_xlarge"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_normal"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/background_edittext_white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_small"
                android:paddingTop="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_normal">

                <sis.com.sis.sis_app.Views.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:text="@string/main_customer_codename"
                    android:textColor="@color/colorBlueMedium" />

                <sis.com.sis.sis_app.Views.CustomTextView
                    android:id="@+id/textViewCustomerCodeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:maxLines="2"
                    android:text="-" />

                <sis.com.sis.sis_app.Views.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:text="@string/main_shipto_codename"
                    android:textColor="@color/colorBlueMedium" />

                <sis.com.sis.sis_app.Views.CustomTextView
                    android:id="@+id/textViewShipToCodeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:maxLines="3"
                    android:text="-" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/main_po_no"
                        android:textColor="@color/colorBlueMedium" />

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewPONo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="-" />

                </LinearLayout>

            </LinearLayout>

            <sis.com.sis.sis_app.Views.CustomTextView
                android:id="@+id/textTopicStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginRight="@dimen/padding_normal"
                android:text="@string/main_status_title"
                android:textColor="@color/colorBlueMedium"
                android:textSize="@dimen/font_xlarge"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_normal"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/background_edittext_white"
                android:orientation="vertical"

                android:paddingTop="@dimen/padding_normal"

                android:paddingBottom="@dimen/padding_normal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_so_no"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewSoNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:maxLines="1"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"

                        android:text="@string/main_so_datetime"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewSoDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_do_no"
                        android:textColor="@color/colorBlueMedium"
                        />

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewDoNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_do_datetime"
                        android:textColor="@color/colorBlueMedium"
                        />

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewDoDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_pk_no"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewPkNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_pk_datetime"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewPkDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_pgi_no"
                        android:textColor="@color/colorBlueMedium"
                        />

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewPGINo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_pgi_datetime"
                        android:textColor="@color/colorBlueMedium"
                        />

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewPGIDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_inv_no"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewInvNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:weightSum="8">

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingLeft="24dp"
                        android:text="@string/main_inv_datetime"
                        android:textColor="@color/colorBlueMedium"
                        android:background="@color/colorBlueSky"/>

                    <sis.com.sis.sis_app.Views.CustomTextView
                        android:id="@+id/textViewInvDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="-"
                        android:background="@color/colorBlueSky"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <sis.com.sis.sis_app.Views.CustomMessageRelativeLayout
        android:id="@+id/rl_no_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewHeader"
        android:layout_marginTop="@dimen/padding_normal"
        android:visibility="gone" />
</LinearLayout>
